Header.php Done
--Working on main body
--Title text needs formatting, div set aside to arrange how necessary

--- a/socialchangefilm/style.css
+++ b/socialchangefilm/style.css
@@ -520,9 +520,10 @@ a:active {
 5.2 Menus
 --------------------------------------------------------------*/
 .main-navigation {
+    position: relative;
 	clear: both;
 	display: block;
-    margin: 0 auto 30px auto;
+    margin: 0 auto;
     
 }
 
@@ -907,21 +908,64 @@ object {
 
 
 .site-header {
+    position: relative;
     background: rgba(255,255,255,1);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.4);
 }
 
 
 
 @media screen and (min-width: 1250px) {
     .site-branding {
+        position: relative;
         width: 1140px;
         margin: 0 auto;
     }
     
     .main-navigation {
         width: 1140px;
-        border: 1px red solid;
+        /*border: 1px red solid;*/
         
     }
 
+}
+
+.mainNavSpan {
+    padding: 0;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.powerButton {
+    position: absolute;
+    background-image: url("http://localhost/wordpress/wp-content/uploads/2015/02/powerBtnBG.png");
+    display:block;  
+    width: 70px;
+    height: 58px;
+    left: calc(50% - 20px);
+    bottom: -29px;
+}
+
+.powerButton > a img{
+    margin-left: 19px;
+    margin-top: 6px;
+}
+
+.heroImage {
+    width: 100%;
+    padding-top: 90px;
+    padding-bottom: 70px;
+    border: 1px solid red;
+    background-image: url("http://localhost/wordpress/wp-content/uploads/2015/02/CISCFF_Img_-12.jpg");
+    background-position: 50% 49%;
+    background-size: cover;
+}
+
+.welcomeTitle {
+    border: 2px dashed green;
+    height: 450px;
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    color: #fff;
 }
