--- a/socialchangefilm/style.css
+++ b/socialchangefilm/style.css
@@ -909,7 +909,9 @@ object {
 
 
 .site-header {
-    position: relative;
+    position: fixed;
+    z-index: 3;
+    width: 100%;
     background: rgba(255,255,255,1);
     box-shadow: 0 1px 3px rgba(0,0,0,0.4);
 }
@@ -963,6 +965,7 @@ object {
     background-image: url("http://localhost/wordpress/wp-content/uploads/2015/02/CISCFF_Img_-12.jpg");
     background-position: 50% 49%;
     background-size: cover;
+    margin-top: 100px;
 }
 
 .welcomeTitle {
